--- a/src/components/rocket-details/rocket-details.scss
+++ b/src/components/rocket-details/rocket-details.scss
@@ -1,7 +1,7 @@
 .rocket-details {
     width: 100%;
     padding: 30px;
-    box-shadow: 0px 0px 86px -46px rgba(0,0,0,0.75);
+    box-shadow: 20px 20px 20px 20px rgba(0, 0, 0, 0.75);
 }
 
 .rocket-details__img-wrapper {
