--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,10 +1,16 @@
 li {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
-  &:hover {
     text-decoration: none;
-  }
+
+    &:hover {
+        text-decoration: none;
+    }
+}
+
+.app {
+    min-height: 100vh;
+    position: relative;
 }
