--- a/src/components/rocket-item/rocket-item.scss
+++ b/src/components/rocket-item/rocket-item.scss
@@ -4,7 +4,8 @@
     width: 100%;
     margin-bottom: 20px;
     padding: 15px;
-    box-shadow: 0px 0px 86px -46px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 86px -46px rgba(0, 0, 0, 0.75);
+
     span {
         text-transform: uppercase;
     }
@@ -26,4 +27,19 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.btn-rocket {
+    color: #fff;
+    border: 1px solid #343a40;
+    background: #343a40;
+    text-transform: uppercase;
+    padding: 5px 15px;
+    border-radius: 4px;
+    transition: .4s;
+
+    &:hover {
+        color: #343a40 !important;;
+        background: #fff;
+    }
 }
