--- a/src/components/rocket-list/rocket-list.scss
+++ b/src/components/rocket-list/rocket-list.scss
@@ -9,6 +9,12 @@
     animation-duration: .2s;
 }
 
+@media screen and (max-width: 768px) {
+    .rocket-list {
+        box-shadow: 10px 10px 44px -12px rgba(0,0,0,0.75);
+    }
+}
+
 @keyframes transrow {
     0% {
         opacity: 0;
