--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -14,3 +14,9 @@ a {
     min-height: 100vh;
     position: relative;
 }
+
+@media screen and (max-width: 480px) {
+    * {
+        line-height: 1.2;
+    }
+}
