--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -6,3 +6,9 @@ footer {
     bottom: -50px;
     text-align: center;
 }
+
+@media screen and (max-width: 480px) {
+    .footer-logo {
+        width: 70%;
+    }
+}
