--- a/src/components/rocket-details/rocket-details.scss
+++ b/src/components/rocket-details/rocket-details.scss
@@ -8,6 +8,7 @@
     margin: 0 auto 20px;
     width: 100%;
     height: 500px;
+    box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.75);
 }
 
 .rocket-details__img {
@@ -15,13 +16,34 @@
     height: 100%;
 }
 
-.rocket-details__info {
-
-}
-
 .rocket-details__row {
     margin-bottom: 20px;
     span {
         text-transform: uppercase;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .rocket-details {
+        box-shadow: 10px 10px 44px -12px rgba(0,0,0,0.75);
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .rocket-details {
+        font-size: 15px;
+    }
+
+    .rocket-details__img-wrapper {
+        height: 400px;
+    }
+    .rocket-details__row {
+        margin-bottom: 10px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .rocket-details__img-wrapper {
+        height: 300px;
     }
 }
