--- a/src/components/ship-details/ship-details.scss
+++ b/src/components/ship-details/ship-details.scss
@@ -8,6 +8,7 @@
     width: 100%;
     height: 400px;
     margin-bottom: 20px;
+    box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.75);
 }
 
 .ship__img {
@@ -17,4 +18,18 @@
 
 .ship-details__row {
     margin-bottom: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .ship-details {
+        box-shadow: 10px 10px 44px -12px rgba(0,0,0,0.75);
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .ship-details__img-wrapper {
+        width: 100%;
+        height: 300px;
+        margin-bottom: 20px;
+    }
 }
