--- a/src/components/ship-item/ship-item.scss
+++ b/src/components/ship-item/ship-item.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 260px;
     margin-bottom: 10px;
+    box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.75);
 }
 
 .ship-img {
@@ -47,6 +48,23 @@
         .btn-ship {
             opacity: 1;
         }
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .ship-list__item {
+        height: 190px;
+    }
+
+    .ship__img-wrapper {
+        width: 100%;
+        height: 120px;
+        margin-bottom: 10px;
+    }
+
+    .ship-img {
+        width: 100%;
+        height: 100%;
     }
 }
 
