--- a/src/components/ships-list/ship-list.scss
+++ b/src/components/ships-list/ship-list.scss
@@ -5,3 +5,9 @@
     padding: 15px;
     box-shadow: 20px 20px 20px 20px rgba(0, 0, 0, 0.75);
 }
+
+@media screen and (max-width: 768px) {
+    .ship-list {
+        box-shadow: 10px 10px 44px -12px rgba(0,0,0,0.75);
+    }
+}
