--- a/src/components/rocket-details/rocket-details.scss
+++ b/src/components/rocket-details/rocket-details.scss
@@ -1,14 +1,12 @@
 .rocket-details {
     width: 100%;
-    padding: 30px;
-    box-shadow: 20px 20px 20px 20px rgba(0, 0, 0, 0.75);
+    padding: 15px;
 }
 
 .rocket-details__img-wrapper {
     margin: 0 auto 20px;
     width: 100%;
     height: 500px;
-    box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.75);
 }
 
 .rocket-details__img {
@@ -16,16 +14,16 @@
     height: 100%;
 }
 
-.rocket-details__row {
-    margin-bottom: 20px;
-    span {
-        text-transform: uppercase;
-    }
+.rocket-details__info {
+    padding: 15px;
+    background-color: #343a40;
+    color: #fff;
 }
 
-@media screen and (max-width: 768px) {
-    .rocket-details {
-        box-shadow: 10px 10px 44px -12px rgba(0,0,0,0.75);
+.rocket-details__row {
+    margin-bottom: 10px;
+    span {
+        text-transform: uppercase;
     }
 }
 
@@ -37,13 +35,14 @@
     .rocket-details__img-wrapper {
         height: 400px;
     }
+
     .rocket-details__row {
         margin-bottom: 10px;
     }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 380px) {
     .rocket-details__img-wrapper {
-        height: 300px;
+        height: 250px;
     }
 }
