--- a/src/components/ship-details/ship-details.scss
+++ b/src/components/ship-details/ship-details.scss
@@ -1,14 +1,12 @@
 .ship-details {
     width: 100%;
-    padding: 30px;
-    box-shadow: 20px 20px 20px 20px rgba(0, 0, 0, 0.75);
+    padding: 15px;
 }
 
 .ship-details__img-wrapper {
     width: 100%;
-    height: 400px;
+    height: 500px;
     margin-bottom: 20px;
-    box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.75);
 }
 
 .ship__img {
@@ -20,16 +18,14 @@
     margin-bottom: 10px;
 }
 
-@media screen and (max-width: 768px) {
-    .ship-details {
-        box-shadow: 10px 10px 44px -12px rgba(0,0,0,0.75);
+@media screen and (max-width: 425px) {
+    .ship-details__img-wrapper {
+        height: 300px;
     }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 380px) {
     .ship-details__img-wrapper {
-        width: 100%;
-        height: 300px;
-        margin-bottom: 20px;
+        height: 200px;
     }
 }
