--- a/src/components/ship-item/ship-item.scss
+++ b/src/components/ship-item/ship-item.scss
@@ -2,7 +2,6 @@
     width: 100%;
     height: 260px;
     margin-bottom: 10px;
-    box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.75);
 }
 
 .ship-img {
@@ -26,7 +25,6 @@
 
 .ship-list__item {
     width: 48%;
-    height: 320px;
     box-shadow: 0px 0px 86px -46px rgba(0, 0, 0, 0.75);
     padding: 15px;
     margin-bottom: 20px;
@@ -51,20 +49,34 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .ship__img-wrapper {
+        height: 200px;
+    }
+
+    .ship__item-name {
+        font-size: 20px;
+    }
+}
+
 @media screen and (max-width: 520px) {
     .ship-list__item {
-        height: 190px;
+        padding: 5px;
     }
 
     .ship__img-wrapper {
-        width: 100%;
         height: 120px;
         margin-bottom: 10px;
     }
 
-    .ship-img {
-        width: 100%;
-        height: 100%;
+    .ship__item-name {
+        font-size: 17px;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .ship__img-wrapper {
+        height: 100px;
     }
 }
 
