--- a/src/components/ship-item/ship-item.scss
+++ b/src/components/ship-item/ship-item.scss
@@ -13,9 +13,9 @@
     color: #fff;
     opacity: 0;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -40%);
     border: none;
     padding: 20px;
     text-transform: uppercase;
@@ -44,9 +44,15 @@
         }
 
         .btn-ship {
+            top: 50%;
+            transform: translate(-50%, -50%);
             opacity: 1;
         }
     }
+}
+
+.ship__item-name {
+    text-align: center;
 }
 
 @media screen and (max-width: 768px) {
