--- a/src/components/rocket-item/rocket-item.scss
+++ b/src/components/rocket-item/rocket-item.scss
@@ -56,16 +56,16 @@
         height: 150px;
     }
 
+    .rocket-info__name {
+        font-size: 25px;
+    }
+
     .rocket__item-info {
         width: 55%;
     }
 
     .rocket__item {
         font-size: 13px;
-    }
-
-    .rocket-details__name {
-        font-size: 20px;
     }
 
     .btn-rocket {
