--- a/src/components/ship-item/ship-item.scss
+++ b/src/components/ship-item/ship-item.scss
@@ -21,6 +21,9 @@
     text-transform: uppercase;
     transition: .4s;
     background: none;
+    a {
+        font-size: 25px;
+    }
 }
 
 .ship-list__item {
