--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,4 @@
 .space-x-logo {
-    margin-left: 100px;
     width: 200px;
     margin-bottom: 10px;
 }
@@ -7,32 +6,71 @@
 .header-link {
     width: 100px;
     height: 50px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
     a {
         display: flex;
         align-items: center;
         font-size: 25px;
+        max-width: 100%;
+        transition: .3s;
+
+        &:hover {
+            transform: scale(1.1);
+        }
     }
 }
 
-@media screen and (max-width: 768px) {
-    .space-x-logo {
-        width: 130px;
-        margin-left: 80px;
+.header__burger {
+    display: none;
+}
+
+
+@media screen and (max-width: 760px) {
+    .header-link-pc {
+        display: none;
+    }
+
+    .header__burger {
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        z-index: 2;
+    }
+
+    .header__burger span {
+        position: absolute;
+        background-color: #fff;
+        left: 0;
+        width: 100%;
+        height: 3px;
+        top: 9px;
+        border-radius: 4px;
+    }
+
+    .header__burger:before,
+    .header__burger:after {
+        content: '';
+        background: #fff;
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        left: 0;
+        border-radius: 4px;
+    }
+
+    .header__burger:before {
+        top: 0;
+    }
+
+    .header__burger:after {
+        bottom: 0;
     }
 }
+
 
 @media screen and (max-width: 480px) {
     .header-link {
         width: 60px;
-    }
-
-    .space-x-logo {
-        width: 110px;
-        margin-left: 50px;
     }
 }
