--- a/src/components/ship-item/ship-item.scss
+++ b/src/components/ship-item/ship-item.scss
@@ -17,10 +17,11 @@
     left: 50%;
     transform: translate(-50%, -40%);
     border: none;
+    border-radius: 10px;
     padding: 20px;
     text-transform: uppercase;
     transition: .4s;
-    background: none;
+    background: #ffffff;
     a {
         font-size: 25px;
     }
@@ -94,6 +95,6 @@
         background-color: rgba(0, 0, 0, 0.2);
     }
     100% {
-        background-color: rgba(20, 18, 18, 0.2);
+        background-color: rgba(20, 18, 18, 0.4);
     }
 }
