--- a/src/components/rocket-details/rocket-details.scss
+++ b/src/components/rocket-details/rocket-details.scss
@@ -7,7 +7,7 @@
     padding: 15px;
     background-color: #343a40;
     color: #fff;
-    margin-bottom: 20px;
+    margin: 30px 0 20px;
 }
 
 .rocket-details__name {
