--- a/src/components/rocket-item/rocket-item.scss
+++ b/src/components/rocket-item/rocket-item.scss
@@ -5,11 +5,12 @@
     margin-bottom: 20px;
     padding: 15px;
     transition: .2s;
-    box-shadow: 0px 0px 86px -46px rgba(0, 0, 0, 0.75);
     cursor: pointer;
+    border: 3px solid rgba(70, 109, 252, 0.3);
+    border-radius: 15px;
 
     &:hover {
-        box-shadow: 5px 5px 20px 10px rgba(0, 0, 0, 0.75);
+        box-shadow: 5px 5px 30px -5px rgba(0, 0, 0, 0.75);
         transform: scale(1.01);
     }
 
