--- a/src/components/rocket-item/rocket-item.scss
+++ b/src/components/rocket-item/rocket-item.scss
@@ -19,6 +19,11 @@
     }
 }
 
+.rocket__item_dark:hover {
+    box-shadow: 5px 5px 30px -5px rgba(21, 95, 245, 0.75);
+}
+
+
 .rocket-img-wrapper {
     width: 30%;
     height: 220px;
