--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -30,6 +30,7 @@ button:focus, input:focus {
 .app {
     min-height: 100vh;
     position: relative;
+    transition: .3s;
 }
 
 @media screen and (max-width: 480px) {
