--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,10 +6,10 @@
 .header-link {
     width: 100px;
     height: 50px;
-
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
     a {
-        display: flex;
-        align-items: center;
         font-size: 25px;
         max-width: 100%;
         transition: .3s;
@@ -18,6 +18,11 @@
             transform: scale(1.1);
         }
     }
+}
+
+.header-link-theme {
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .header__burger {
