--- a/src/components/ships-list/ship-list.scss
+++ b/src/components/ships-list/ship-list.scss
@@ -14,6 +14,50 @@
     align-items: center;
 }
 
+.ship-list__item {
+    width: 48%;
+    border: 3px solid rgba(70, 109, 252, 0.3);
+    border-radius: 15px;
+    padding: 15px;
+    margin-bottom: 20px;
+    position: relative;
+    transition: .3s;
+
+    &:hover {
+        :before {
+            content: '';
+            position: absolute;
+            top: -2px;
+            bottom: -2px;
+            left: -2px;
+            right: -2px;
+            animation-name: animationbackground;
+            animation-duration: .4s;
+            animation-fill-mode: forwards;
+            border-radius: 10px;
+        }
+
+        .btn-ship {
+            top: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 1;
+        }
+    }
+
+    &.ship-list__item_dark {
+        border: 3px solid rgba(70, 109, 252, 0.3);
+
+        &:hover {
+            transform: scale(1.01);
+            box-shadow: 5px 5px 30px -5px rgba(21, 95, 245, 0.75);
+
+            :before {
+                animation: none;
+            }
+        }
+    }
+}
+
 .ship-list__pages-btn {
     padding: 15px;
     transition: .2s;
@@ -29,5 +73,17 @@
         font-size: 20px;
         background-color: #a19c9c;
         border: 2px solid #fff;
+
+        &.ship-list__pages-btn_dark {
+            background-color: white;
+            color: black;
+        }
     }
+}
+
+
+.ship-list__pages-btn_dark {
+    background-color: transparent;
+    border: 2px solid transparent;
+    color: #fff;
 }
