--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -15,7 +15,7 @@
         transition: .3s;
 
         &:hover {
-            transform: scale(1.1);
+            text-shadow: 1px 1px 2px black, 0 0 1em;
         }
     }
 }
