--- a/src/components/ships-list/ship-list.scss
+++ b/src/components/ships-list/ship-list.scss
@@ -35,7 +35,7 @@
 
 .ship-list__item {
     width: 48%;
-    border: 3px solid rgba(70, 109, 252, 0.3);
+    border: 3px solid rgba(21, 95, 252, .5);
     padding: 15px;
     margin-bottom: 20px;
     position: relative;
@@ -97,9 +97,19 @@
     }
 }
 
-
 .ship-list__pages-btn_dark {
     background-color: transparent;
     border: 2px solid transparent;
     color: #fff;
+}
+
+
+@media screen and (max-width: 512px) {
+    .ship-list__item {
+        border: 1px solid rgba(21, 95, 252, .5);
+
+        &.ship-list__item_dark {
+            border: 1px solid rgba(21, 95, 252, .5);
+        }
+    }
 }
