--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -38,3 +38,12 @@ button:focus, input:focus {
         line-height: 1.2;
     }
 }
+
+@keyframes animation-active {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
+}
