--- a/src/components/pages/home-page.scss
+++ b/src/components/pages/home-page.scss
@@ -5,6 +5,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    animation-name: animation-active;
+    animation-duration: .2s;
 }
 
 .home-page__title {
