--- a/src/components/pages/home-page.scss
+++ b/src/components/pages/home-page.scss
@@ -1,7 +1,5 @@
 .home-page {
-    background: url('../images/photo-1541185933-ef5d8ed016c2.jpg');
-    background-size: cover;
-    min-height: 100vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
