--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -8,8 +8,10 @@
 }
 
 html, body {
-    height: 100%;
     font-family: 'Teko', sans-serif;
+    background: url('../images/space.jpg') no-repeat 50% 50% fixed;
+    background-size: cover;
+    color: #fff;
 }
 
 a, ul, li {
@@ -41,7 +43,7 @@ button:focus, input:focus {
 
 @keyframes animation-active {
     0% {
-        transform: translateX(100%);
+        transform: translateX(10%);
     }
     100% {
         transform: translateX(0%);
