--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -1,4 +1,5 @@
 .item__details {
+    margin-top: 80px;
     padding: 15px;
     animation-name: animation-active;
     animation-duration: .2s;
@@ -14,5 +15,7 @@
 
     &-content {
         margin-top: 30px;
+        background: rgba(3, 3, 3, 0.3);
+        padding: 15px;
     }
 }
