--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -10,9 +10,10 @@
     align-items: center;
     text-transform: uppercase;
     a {
-        font-size: 25px;
+        font-size: 20px;
         max-width: 100%;
         transition: .3s;
+        color: #fff;
 
         &:hover {
             text-shadow: 1px 1px 2px black, 0 0 1em;
@@ -20,16 +21,13 @@
     }
 }
 
-.header-link-theme {
-    font-size: 20px;
-    cursor: pointer;
-    color: #007bff;
-}
-
 .header__burger {
     display: none;
 }
 
+.header-link.header-link-pc.active a{
+    color: #ffe000;
+}
 
 @media screen and (max-width: 760px) {
     .header-link-pc {
