--- a/src/components/item-list/item-list.scss
+++ b/src/components/item-list/item-list.scss
@@ -1,28 +1,24 @@
 .items__list {
+    margin-top: 80px;
     padding: 15px;
     animation-name: animation-active;
     animation-duration: .2s;
+    display: flex;
+    justify-content: center;
 
     &-element {
+        margin: 0 10px;
+        transform: skew(-15deg, 0deg) translateY(0px);
         cursor: pointer;
-        display: flex;
-        width: 100%;
-        height: 250px;
-        margin-bottom: 25px;
+        display: block;
+        width: 22%;
+        height: 500px;
         box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
         transition: .3s;
+        clip-path: polygon(0 100%, 0 0, 100% 10%, 100% 100%);
 
         &:hover {
-            box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.55);
-            transform: scale(1.005);
+            transform: skew(-15deg, 0deg) translateY(50px);
         }
-    }
-}
-
-.items__list-element_dark {
-    box-shadow: 0px 0px 3px 1px rgba(255, 255, 255, 0.25);
-
-    &:hover {
-        box-shadow: 0px 0px 10px 5px rgba(32, 57, 253, 0.55);
     }
 }
