--- a/src/components/ships-list/ship-list.scss
+++ b/src/components/ships-list/ship-list.scss
@@ -1,4 +1,5 @@
 .ship-list {
+    margin-top: 80px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -14,73 +15,26 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.btn-ship {
-    color: #fff;
-    opacity: 0;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -40%);
-    border: none;
-    border-radius: 10px;
-    padding: 20px;
-    text-transform: uppercase;
-    transition: .4s;
-    background: #ffffff;
-
-    a {
-        font-size: 25px;
-    }
+    background: transparent;
 }
 
 .ship-list__item {
-    width: 48%;
-    border: 3px solid rgba(21, 95, 252, .5);
-    padding: 15px;
+    width: 31%;
     margin-bottom: 20px;
-    position: relative;
     transition: .3s;
 
     &:hover {
-        :before {
-            content: '';
-            position: absolute;
-            top: -2px;
-            bottom: -2px;
-            left: -2px;
-            right: -2px;
-            animation-name: animationbackground;
-            animation-duration: .4s;
-            animation-fill-mode: forwards;
-        }
-
-        .btn-ship {
-            top: 50%;
-            transform: translate(-50%, -50%);
-            opacity: 1;
-        }
-    }
-
-    &.ship-list__item_dark {
-        border: 3px solid rgba(70, 109, 252, 0.3);
-
-        &:hover {
-            box-shadow: 5px 5px 30px -5px rgba(21, 95, 245, 0.75);
-
-            :before {
-                animation: none;
-            }
-        }
+        transform: scale(1.03);
     }
 }
+
 
 .ship-list__pages-btn {
     padding: 15px;
     transition: .2s;
-    background-color: #fff;
-    border: 2px solid #fff;
+    background: transparent;
+    color: #fff;
+    border: 2px solid transparent;
 
     &:hover {
         font-size: 20px;
@@ -89,20 +43,8 @@
 
     &.active {
         font-size: 20px;
-        background-color: #a19c9c;
         border: 2px solid #fff;
-
-        &.ship-list__pages-btn_dark {
-            background-color: white;
-            color: black;
-        }
     }
-}
-
-.ship-list__pages-btn_dark {
-    background-color: transparent;
-    border: 2px solid transparent;
-    color: #fff;
 }
 
 
