--- a/src/components/ship-item/ship-item.scss
+++ b/src/components/ship-item/ship-item.scss
@@ -1,56 +1,4 @@
-.ship__img-wrapper {
-    width: 100%;
-    height: 200px;
-    margin-bottom: 10px;
-    border-bottom: 3px solid #ffe000;
-}
-
-.ship-img {
-    width: 100%;
-    height: 100%;
-}
-
-.ship__item-name {
+.item__title {
     text-align: center;
     color: #ffe000;
-}
-
-@media screen and (max-width: 768px) {
-    .ship__img-wrapper {
-        height: 200px;
-    }
-
-    .ship__item-name {
-        font-size: 20px;
-    }
-}
-
-@media screen and (max-width: 520px) {
-    .ship-list__item {
-        padding: 5px;
-    }
-
-    .ship__img-wrapper {
-        height: 120px;
-        margin-bottom: 10px;
-    }
-
-    .ship__item-name {
-        font-size: 17px;
-    }
-}
-
-@media screen and (max-width: 380px) {
-    .ship__img-wrapper {
-        height: 100px;
-    }
-}
-
-@keyframes animationbackground {
-    0% {
-        background-color: rgba(0, 0, 0, 0.2);
-    }
-    100% {
-        background-color: rgba(20, 18, 18, 0.4);
-    }
 }
