--- a/src/components/ships-list/ship-list.scss
+++ b/src/components/ships-list/ship-list.scss
@@ -1,59 +1,3 @@
-.ship-list {
-    margin-top: 80px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 15px;
-    animation-name: animation-active;
-    animation-duration: .2s;
-}
-
-.ship-list__pages {
-    margin: 20px;
-    width: 150px;
-    height: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: transparent;
-}
-
-.ship-list__item {
-    width: 31%;
-    margin-bottom: 20px;
-    transition: .3s;
-
-    &:hover {
-        transform: scale(1.03);
-    }
-}
-
-
-.ship-list__pages-btn {
-    padding: 15px;
-    transition: .2s;
-    background: transparent;
-    color: #fff;
-    border: 2px solid transparent;
-
-    &:hover {
-        font-size: 20px;
-        border: 2px solid #a19c9c;
-    }
-
-    &.active {
-        font-size: 20px;
-        border: 2px solid #fff;
-    }
-}
-
-
-@media screen and (max-width: 512px) {
-    .ship-list__item {
-        border: 1px solid rgba(21, 95, 252, .5);
-
-        &.ship-list__item_dark {
-            border: 1px solid rgba(21, 95, 252, .5);
-        }
-    }
+.items__list_ships {
+    margin: 80px 0 0;
 }
