--- a/src/components/item/item.scss
+++ b/src/components/item/item.scss
@@ -14,3 +14,15 @@
     font-size: 20px;
     text-transform: uppercase;
 }
+
+@media screen and (max-width: 767px) {
+    .item__title {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 512px) {
+    .item__title {
+        font-size: 15px;
+    }
+}
