--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -19,3 +19,15 @@
         padding: 15px;
     }
 }
+
+@media screen and (max-width: 760px) {
+    .item__details-row {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 512px) {
+    .item__details-row {
+        font-size: 15px;
+    }
+}
