--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,9 +2,7 @@ footer {
     height: 60px;
     width: 100%;
     padding: 10px;
-    background-color: #343a40!important;
-    position: absolute;
-    bottom: -55px;
+    background-color: #343a40;
     text-align: center;
 }
 
