--- a/src/components/pages/home-page.scss
+++ b/src/components/pages/home-page.scss
@@ -6,11 +6,18 @@
 }
 
 .home-page__title {
+    font-size: 70px;
     padding: 15px;
     color: #fff;
     background-color: rgb(9%, 25%, 40%, .5);
     animation-name: animation-active;
-    animation-duration: .2s;
+    animation-duration: .3s;
+}
+
+@media screen and (max-width: 1024px) {
+    .home-page__title {
+        font-size: 50px;
+    }
 }
 
 @media screen and (max-width: 768px) {
