--- a/src/components/header-menu-mobile/header-menu-mobile.scss
+++ b/src/components/header-menu-mobile/header-menu-mobile.scss
@@ -21,6 +21,7 @@
     font-size: 35px;
     text-align: right;
     width: auto;
+    text-transform: uppercase;
 }
 
 @media screen and (max-width: 575px) {
