--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -15,6 +15,18 @@ a, ul, li {
 
 html, body {
     height: 100%;
+    ::-webkit-scrollbar {
+        width: 15px; /* ширина для вертикального скролла */
+        height: 8px; /* высота для горизонтального скролла */
+        background-color: #231e1e;
+    }
+
+    /* ползунок скроллбара */
+    ::-webkit-scrollbar-thumb {
+        background-color: #7b797a;
+        border-radius: 9em;
+        //box-shadow: inset 1px 1px 10px #f3faf7;
+    }
 }
 
 a:hover {
